# ChangeLog for Keychain; http://www.funtoo.org
#
# Copyright 2002-2006 Gentoo Foundation http://www.gentoo.org/
# Copyright 2007 Aron Griffis <agriffis@n01se.net>
# Copyright 2009-2015 Funtoo Solutions, Inc.
# lockfile() Copyright 2009 Parallels, Inc.

# Distributed under the GNU General Public License version 2

# Originally authored by Daniel Robbins <drobbins@gentoo.org>
# Maintained August 2002 - April 2003 by Seth Chandler <sethbc@gentoo.org>
# Maintained and rewritten April 2004 - July 2007 by Aron Griffis <agriffis@n01se.net>
# Maintained July 2009 - present by Daniel Robbins <drobbins@funtoo.org>

* keychain 2.8.3 (24 Jun 2016)

  Summary: fix gpg key addition (Clemens Kaposi)

* keychain 2.8.2 (06 Nov 2015)

  Summary: Support new ssh features, bug fix release.

  Support for new hash algorithms (Ben Boeckel)

  Remove bashisms (Daniel Hertz)

  Various optimizations (Daniel Hahler)

  --timeout option now gets passed to agent, doc fixes (Andrew Bezella, Emil
  Lundberg)

  RPM, Makefile fixes (Mike Frysinger)

* keychain 2.8.1 (29 May 2015)

  Summary: POSIX compatibility and bug fix release.

  Only set PATH to a standard value if PATH is not set. Otherwise, do not
  modify.

  Makefile Cygwin and RPM spec fixes (thanks Luke Bakken and Ricardo Silva)

  Confhost fixes. Deprecate in_path. Use command -v instead.

  Find_pids: Modify "ps" call to work with non-GNU ps. (Bryan Drewery)

  Re-introduce POSIX compatibility (remove shopt.) (vaeth)

* keychain 2.8.0 (21 Mar 2015)

  Support for OpenSSH 6.8 fingerprints.
  Support for GnuPG 2.1.0.

  Handle private keys that are symlinks, even if the associated public key is
  in the target directory rather than alongside the symlink.

  Allow private keys to have extensions, such as foo.priv. When looking for
  matching public keys, look for foo.priv.pub, but also strip extension and
  look for foo.pub if foo.priv.pub doesn't exist.

  Initial support for --list/-l option to list SSH keys.
