@@ -2,7 +2,7 @@
 #
 # Copyright 2002-2006 Gentoo Foundation http://www.gentoo.org/
 # Copyright 2007 Aron Griffis <agriffis@n01se.net>
-# Copyright 2009-2015 Funtoo Solutions, Inc.
+# Copyright 2009-2017 Funtoo Solutions, Inc.
 # lockfile() Copyright 2009 Parallels, Inc.
 
 # Distributed under the GNU General Public License version 2
@@ -10,7 +10,8 @@
 # Originally authored by Daniel Robbins <drobbins@gentoo.org>
 # Maintained August 2002 - April 2003 by Seth Chandler <sethbc@gentoo.org>
 # Maintained and rewritten April 2004 - July 2007 by Aron Griffis <agriffis@n01se.net>
-# Maintained July 2009 - present by Daniel Robbins <drobbins@funtoo.org>
+# Maintained July 2009 - September 2017 by Daniel Robbins <drobbins@funtoo.org>
+# Maintained September 2017 - present by Ryan Harris <x48rph@gmail.com>
 
 * keychain 2.8.3 (24 Jun 2016)
 
